--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -137,84 +137,62 @@
 
 
 //ПОСЛЕДНИЕ РАБОТЫ
-
-.last-worck{
-  display: flex;
-  width: auto;
-  height: 530px;
-  a{
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
-    font-weight: bold;
-  }
-}
-
-.slider{
+.img-slider{
   width: 500px;
-  height: 300px;
-  margin: 0 auto;
-  position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  .img{
-    position: absolute;
-    display: none;
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
+  height: 500px;
+  object-fit: cover;
+  @include mediaWidth($widthPhone) {
+    height: 400px;
   }
-    .img.curry{
-      display: block;
-      width: 500px;
-    }
 }
-.prev{
-  position: relative;
-  top: 200px;
-  left: 250px;
+.carousel-dark .carousel-control-next-icon, .carousel-dark .carousel-control-prev-icon {
+  filter: invert(1) grayscale(100);
 }
-.next{
-  position: relative;
-  top: 200px;
-  right: 250px;
-}
-.slider__but{
-  width: 30px;
-  height: 30px;
-}
+
 
 //КОНТАКТЫ
-.contact{
-  display: flex;
-  margin: 0 auto;
-}
-
 .contact-wrap{
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
-.contact__left-block{
+.contact__information-field{
   width: 350px;
   height: auto;
   background: linear-gradient(90deg, #8E9EAB 0%, #EEF2F3 100%);
   position: absolute;
   z-index: 2;
-  padding: 10px;
-  @include mediaWidth($widthXs) {
+  padding: 15px 20px;
+  @include mediaWidth($widthPhone) {
     position: relative;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
-
+    @include mediaWidth(680) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
 }
-.wrap{
+.wrap-content-box{
   display: flex;
   flex-direction: column;
+  @include mediaWidth(680) {
+   margin: 10px;
+  }
 }
-.mar{
-  margin-left: 10px;
+.wrap-content-box--margin-mobile,
+.working-hours--margin-mobile,
+.map-social-media--margin-mobile{
+  @include mediaWidth(680) {
+    margin-left: 30%;
+  }
+  @include mediaWidth($widthXs) {
+    margin-left: 20%;
+  }
 }
 .contact-content{
   display: flex;
@@ -224,18 +202,15 @@
   margin-left: 15px;
   color: white;
 }
-.ini{
+.working-hours__box{
   display:flex;
   flex-direction: row;
 }
-.bold{
+.working-hours__title{
   font-weight: bold;
   color: #3f5791;
 }
-.bold--col{
-  color: white;
-}
-.working-hours__title{
+.working-hours__title--color{
   color: white;
 }
 .social-media{
@@ -243,25 +218,22 @@
   width: 80px;
   display: flex;
   justify-content: space-between;
-
   .social-media__img{
     width: 30px;
     height: 30px;
   }
 }
-
-//карта
-.contact__right-block{
+.contact-wrap__map-field{
+  width: 1168px;
   position: relative;
   z-index: 1;
-  @include mediaWidth($widthXs) {
+  @include mediaWidth($widthPhone) {
     display: none;
   }
 }
-.map iframe{
-  width: 1168px;
+.contact-wrap__map iframe{
+  width: 100%;
   height: 600px;
-
 }
 
 
