--- a/src/pages/osipova.pug
+++ b/src/pages/osipova.pug
@@ -15,20 +15,21 @@ block content
                         div.master-box__text-description
                             div
                                 p.master-box__name Ксения
-                                p.master-box__sector черно-белый реализм
-                                p.master-box__desc Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto, autem commodi cum delectus dolorem ipsum numquam odio perspiciatis velit? Ad maiores minima reprehenderit! Consequuntur eaque labore minus nam quibusdam quis repellendus reprehenderit temporibus voluptatem.
+                                p.master-box__sector Цветная татуировка
+                                p.master-box__desc Уважаю Ваш выбор тату и всегда готова подсказать лучшие варианты реализации. Предпочитаю работы в стилях акварель и графика. Хочу, чтобы по улицам нашего города ходили как можно больше людей с качественными и уникальными изображениями на теле! Без проблем сделаю перекрытие старой тату или замаскирую шрам!
                             div
-                                a(href="https://www.instagram.com/plagintattoo/" target='_blank')
+                                a(href="https://www.instagram.com/_oktattoo_/" target='_blank')
                                     img.master-box__inst(src=require("../images/masters/instagram.svg"))
-                        img.master__photo.master__photo--size(src=require("../images/index/ks-vol.jpg"))
+                        img.master__photo.master__photo--size(src=require("../images/index/osipova.jpg"))
     section.inner
         h2 последние работы
-        section.last-worck
+        //section.last-worck
             div.prev.n
                 a(href='#')
                     img.slider__but(src=require("../images/index/nextb.svg"))
             div.slider
-                img.img.curry(src=require("../images/masters/devushka_gitara_anime_141048_1024x768.jpg"))
+                img.img.curry(src=require("../images/masters/960x960 (1).jpg"))
+                img.img(src=require("../images/index/last/b.jpg"))
                 img.img(src=require("../images/index/last/b.jpg"))
                 img.img(src=require("../images/index/last/c.jpg"))
                 img.img(src=require("../images/index/last/d.jpg"))
@@ -43,9 +44,9 @@ block content
         section.reviews
             div.ower
                 div.rew
-                    p.comment Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias aliquid atque consequuntur dolor dolorem, doloribus earum enim error excepturi in iusto magnam modi molestiae mollitia necessitatibus nisi quae quo, sed, soluta totam voluptas voluptate. Architecto eligendi expedita impedit ipsa vel. Dignissimos dolore saepe soluta! Alias non possimus quam totam!
+                    p.comment Lorem ipsum dolor nim error sossimus quam totam!
                     div.author-comment
-                        span.author-comment__name Дима
+                        span.author-comment__name Игорь
                         span.author-comment__mail verslibre.md@gmail.com
                         span.author-comment__data 17:40 05.04.2021
                 div.rew
@@ -68,7 +69,3 @@ block content
                         input.input.input--size(type='text', placeholder='адрес эл.почты')
                         textarea.input(cols=40, rows=10, placeholder='Ваш отзыв')
                         input.input.input-sub(type='submit', value='отправить')
-
-
-
-
