--- a/src/pages/kovaleva.pug
+++ b/src/pages/kovaleva.pug
@@ -20,10 +20,10 @@ block content
                             div
                                 a(href="https://www.instagram.com/m.kovaleva.tattoo/" target='_blank')
                                     img.master-box__inst(src=require("../images/masters/instagram.svg"))
-                        img.master__photo.master__photo--size(src=require("../images/index/maria.jpg"))
+                        img.master__photo.master__photo--size(src=require("../images/index/kovaleva.jpg"))
     section.inner
         h2 последние работы
-        section.last-worck
+        //section.last-worck
             div.prev.n
                 a(href='#')
                     img.slider__but(src=require("../images/index/nextb.svg"))
