--- a/src/styles/scss/layout.scss
+++ b/src/styles/scss/layout.scss
@@ -19,7 +19,7 @@ h2{
   letter-spacing: 5px;
   font-size: 35px;
   color: $colorMenu;
-  margin: 60px 0;
+  margin: 90px 0 60px 0;
   @include mediaWidth($widthTablet) {
    margin: 40px 0;
   }
@@ -61,7 +61,7 @@ ul{
 .navbar-light .navbar-nav .nav-link {
   color: $colorMenu;
   &:hover{
-    color: green;
+    color: #3c76e3;
   }
 }
 .footer-decoration{
