--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -10,7 +10,7 @@ html(lang="en")
             div.container
                 div.row
                     div.col-12
-                        nav.navbar.navbar-expand-lg.navbar-light.bg-light
+                        nav.navbar.navbar-expand-lg.navbar-light
                             a.navbar-brand(href='/')
                                 img.logo(src=require("../images/layout/logo.svg") alt="logo")
                             button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
