--- a/src/pages/faq.pug
+++ b/src/pages/faq.pug
@@ -2,7 +2,7 @@ extends include/layout
 append sharedVars
     - const pageUrl = '/';
     - const pageTitle = 'FAQ';
-    - const bodyAdditionClass = '';
+    - const bodyAdditionClass = 'faq';
     - const pageAdditionClass = 'main-page';
 block content
     section.inner
