--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,8 +1,18 @@
 
-.cub{
+.meeting-block{
   width: 100%;
-  height: 500px;
+  height: 700px;
   background-color: #6D7077;
+  margin-top: -100px ;
+  @include mediaWidth(991) {
+    margin-top: 0;
+  }
+
+  .meeting-block__picture{
+    width: 100%;
+    height: 700px;
+    object-fit: cover;
+  }
 }
 
 //services
