--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,7 +1,7 @@
 extends include/layout
 append sharedVars
     - const pageUrl = '/';
-    - const pageTitle = 'Zaбей - тату-студия в Туле';
+    - const pageTitle = 'Zaбей - студия татуировки в Туле';
     - const bodyAdditionClass = '';
     - const pageAdditionClass = 'main-page';
 block content
@@ -128,7 +128,7 @@ block content
                         p.contact-content__title +7 (950) 904-34-25
                     div.contact-content
                         img.contact-content__svg(src=require("../images/index/map.svg"))
-                        p.contact-content__title Тула, ул.Демидовская #[br] (Заречье), дом 74
+                        p.contact-content__title.contact-content__title--margin-top Тула, ул.Демидовская #[br] (Заречье), дом 74
                 div.working-hours.working-hours--margin-mobile
                     p.working-hours__title Время работы :
                     div.working-hours__box
