--- a/src/styles/scss/contacts.scss
+++ b/src/styles/scss/contacts.scss
@@ -1,27 +1,53 @@
-
-.title-style-other-pages{
-  text-align: left;
-  margin: 70px 0 70px 200px;
-}
-
-.contact--display{
+.contact-container{
   flex-direction: column;
 }
-
-.contact__info{
+.contact-container__box-info{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   background: linear-gradient(90deg, #B993D6 0%, #8CA6DB 100%);
-  //box-shadow: 0px 46px 268px rgba(69, 141, 184, 0.46), 0px 13.8677px 80.7942px rgba(69, 141, 184, 0.299731), 0px 5.75991px 33.5578px rgba(69, 141, 184, 0.23), 0px 2.08325px 12.1372px rgba(69, 141, 184, 0.160269);
-  width: 1168px;
+  width: 100%;
   height: 200px;
+  @include mediaWidth($widthPhone) {
+    display: none;
+  }
 }
-
-.align-self{
+.wrap-content-box--margin{
+  align-self: center;
+  margin-top: 5px;
+}
+.contact-content--margin-top{
+  margin-top: 10px;
+}
+.contact-content__title--margin-top{
+  margin-top: 10px;
+  @include mediaWidth($widthTablet) {
+   margin-top: 5px;
+  }
+}
+.working-hours--align{
   align-self: center;
 }
 .social-media-page-contact{
-  height: 150px;
+  height: 130px;
+}
+.contact__map{
+  width: 100%;
+}
+.page-contact-map iframe{
+  width: 100%;
+  height: 600px;
+  @include mediaWidth($widthTablet) {
+    height: 400px;
+  }
+  @include mediaWidth($widthPhone) {
+    height: 300px;
+  }
+}
+.contact__information-field--mobile-version-page-contact{
+  display: none;
+  @include mediaWidth($widthPhone) {
+   display: block;
+  }
 }
 
