--- a/src/styles/scss/layout.scss
+++ b/src/styles/scss/layout.scss
@@ -31,6 +31,10 @@ h2{
    margin: 20px 0 0 0;
   }
 }
+.title-style-other-pages{
+  text-align: left;
+  margin: 70px 0 70px 200px;
+}
 p{
   font-family: 'Lora', serif;
 }
@@ -38,6 +42,7 @@ p{
   max-width: 1168px;
   margin: 0 auto;
 }
+
 
 /*---------------------------*/
 
