--- a/src/pages/recording.pug
+++ b/src/pages/recording.pug
@@ -8,7 +8,7 @@ block content
     section.inner
         h2.title-style-other-pages Запись
     div.back-fon-page
-        img.back-fon-page__img(src=require("../images/recording/rec.jpg"))
+        img.back-fon-page__img(src=require("../images/recording/recording.jpg"))
         div.content-page
             div#vue-rec
 
